# UniversalVocoding

./: .gitignore  MANIFEST.in  README.md  config.json  dataset.py  generate.py  index.html  model.py  preprocess.py  requirements.txt  setup.cfg  style.css  synthesis.txt  train.py  utils.py
univoc/: __init__.py  dataset.py  model.py
univoc/config/: config.yaml  preprocess.yaml  train.yaml
